feat: add routing and session management with private/public routes, enhance app structure with new provider and utility hooks

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,15 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"],
+      "@app/*": ["app/*"],
+      "@core/*": ["core/*"],
+      "@features/*": ["features/*"]
+    }
   },
   "include": ["src"]
 }
